Fixed JSON load
Removed invisible characters from json file that caused getjson to fail.

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ a{
   height: 100%;
   display: inline-block;
   float:left;
+  background-color: #88C3D0;
 }
 
 .header .icon{
@@ -118,10 +119,6 @@ h2{
   height: 5rem;
   display: block;
   margin-bottom: 2px;
-}
-
-.deck .icon{
-  background-color: #88C3D0;
 }
 
 .title{
